force-app/main/default/objects/AlternativePaymentMethod/fields/ppbt__Braintree_Device_Data__c.field-meta.xml
<CustomField>
    <fullName>ppbt__Braintree_Device_Data__c</fullName>
    <label>Braintree Device Data (DEPRECATED)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>