force-app/main/default/objects/AlternativePaymentMethod/fields/ppbt__Braintree_Payment_Type__c.field-meta.xml
<CustomField>
    <fullName>ppbt__Braintree_Payment_Type__c</fullName>
    <description>Defines payment method type for Braintree payment gateway adapter</description>
    <inlineHelpText>Defines payment method type for Braintree payment gateway adapter</inlineHelpText>
    <label>Braintree Payment Type (DEPRECATED)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>pp</fullName>
                <label>PayPal</label>
            </value>
            <value>
                <fullName>cc</fullName>
                <label>Credit Card</label>
            </value>
            <value>
                <fullName>ach</fullName>
                <label>US Bank Account</label>
            </value>
            <value>
                <fullName>vnm</fullName>
                <label>Venmo</label>
            </value>
            <value>
                <fullName>ap</fullName>
                <label>ApplePay</label>
            </value>
            <value>
                <fullName>gp</fullName>
                <label>GooglePay</label>
            </value>
            <value>
                <fullName>src</fullName>
                <label>Secure Remote Commerce</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>