force-app/main/default/objects/AlternativePaymentMethod/fields/ppbt__Braintree_Submitted_for_Vault__c.field-meta.xml
<CustomField>
    <fullName>ppbt__Braintree_Submitted_for_Vault__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Defines that payment method should be vaulted on successful transaction</description>
    <label>Braintree Submitted forVault(DEPRECATED)</label>
    <type>Checkbox</type>
</CustomField>