force-app/main/default/objects/AlternativePaymentMethod/fields/ppbt__Braintree_Vaulted__c.field-meta.xml
<CustomField>
    <fullName>ppbt__Braintree_Vaulted__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Defines that payment method is vaulted on Braintree</description>
    <label>Braintree Vaulted (DEPRECATED)</label>
    <type>Checkbox</type>
</CustomField>