force-app/main/default/objects/AlternativePaymentMethod/fields/ppbt__BraintreeMerchantSettings__c.field-meta.xml
<CustomField>
    <fullName>ppbt__BraintreeMerchantSettings__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Braintree Merchant Settings (DEPRECATED)</label>
    <referenceTo>ppbt__MerchantSettings__c</referenceTo>
    <relationshipLabel>Alternative Payment Methods</relationshipLabel>
    <relationshipName>AlternativePaymentMethods</relationshipName>
    <type>Lookup</type>
</CustomField>