force-app/main/default/objects/AlternativePaymentMethod/fields/ppbt__CartCheckoutSessionId__c.field-meta.xml
<CustomField>
    <fullName>ppbt__CartCheckoutSessionId__c</fullName>
    <description>Cart Checkout Session Id</description>
    <label>CartCheckoutSession Id (DEPRECATED)</label>
    <length>18</length>
    <type>Text</type>
</CustomField>