force-app/main/default/objects/AlternativePaymentMethod/fields/ppbt__ShippingAddressCity__c.field-meta.xml
<CustomField>
    <fullName>ppbt__ShippingAddressCity__c</fullName>
    <description>Shipping Address City</description>
    <label>Shipping Address City (DEPRECATED)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>