force-app/main/default/objects/AlternativePaymentMethod/fields/ppbt__ShippingAddressCountry__c.field-meta.xml
<CustomField>
    <fullName>ppbt__ShippingAddressCountry__c</fullName>
    <description>Shipping Address Country</description>
    <label>Shipping Address Country (DEPRECATED)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>