force-app/main/default/objects/AlternativePaymentMethod/fields/ppbt__ShippingAddressPostalCode__c.field-meta.xml
<CustomField>
    <fullName>ppbt__ShippingAddressPostalCode__c</fullName>
    <description>Shipping Address PostalCode</description>
    <label>Shipping Address PostalCode (DEPRECATED)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>