force-app/main/default/objects/AlternativePaymentMethod/fields/ppbt__ShippingAddressState__c.field-meta.xml
<CustomField>
    <fullName>ppbt__ShippingAddressState__c</fullName>
    <description>Shipping Address State</description>
    <label>Shipping Address State (DEPRECATED)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>