force-app/main/default/objects/AlternativePaymentMethod/fields/ppbt__ShippingAddressStreet__c.field-meta.xml
<CustomField>
    <fullName>ppbt__ShippingAddressStreet__c</fullName>
    <description>Shipping Address Street</description>
    <label>Shipping Address Street (DEPRECATED)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>